--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.4.1"
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@webcomponents/webcomponentsjs": "^2.4.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
