--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vj-auto-carousel",
+  "name": "vj-toaster",
   "version": "1.0.0",
-  "description": "Auto carousel vanilla js web component",
+  "description": "Toaster vanilla js web component",
   "main": "index.js",
+  "files": ["dist"],
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -21,17 +22,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kksrini89/vj-auto-carousel.git"
+    "url": "git+https://github.com/kksrini89/vj-toaster.git"
   },
   "keywords": [
-    "auto-carousel",
+    "toaster",
     "webcomponent",
     "vanillajs-wecomponent"
   ],
   "author": "Srinivasan K K",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kksrini89/vj-auto-carousel/issues"
+    "url": "https://github.com/kksrini89/vj-toaster/issues"
   },
-  "homepage": "https://github.com/kksrini89/vj-auto-carousel#readme"
+  "homepage": "https://github.com/kksrini89/vj-toaster#readme"
 }
