--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "scripts": {
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
